# deno

./: BUILD.gn  Cargo.toml
.github/workflows/: benchmarks.yml  build.yml  lint.yml  rust.yml
cli/: Cargo.toml  build.rs  compiler.rs  debugger.rs  file_fetcher.rs  flags.rs  isolate.rs  isolate_state.rs  js.rs  lib.rs  main.rs  op_error.rs  ops.rs  permissions.rs  state.rs  worker.rs
cli/bench/: deno_http.js  http.rs
cli/js2/: main.js
core/: BUILD.gn  bindings.rs  errors.rs  http_bench.js  isolate.rs  lib.rs  libdeno.rs  shared_queue.rs
core/libdeno/: api.cc  binding.cc  buffer.h  deno.h  exceptions.cc  exceptions.h  internal.h  libdeno_test.cc  modules.cc  modules_test.cc
js/: blob_test.ts  buffer_test.ts  build_test.ts  chmod_test.ts  compiler_test.ts  console_test.ts  copy_file_test.ts  custom_event_test.ts  dir_test.ts  dispatch.ts  event_target.ts  event_target_test.ts  event_test.ts  fetch_test.ts  form_data.ts  globals_test.ts  headers_test.ts  libdeno.ts  link_test.ts  location_test.ts  make_temp_dir_test.ts  metrics_test.ts  mkdir_test.ts  msg_ring.ts  net_test.ts  os.ts  os_test.ts  performance_test.ts  permissions_test.ts  process_test.ts  read_file_test.ts  read_link_test.ts  repl.ts  stat_test.ts  symlink_test.ts  test_util.ts  timers_test.ts  truncate_test.ts  url_search_params.ts  util.ts  (+1 more)
op_crates/http/: 00_http.js  Cargo.toml  lib.deno_http.d.ts  lib.rs
runtime/: Cargo.toml  build.rs  lib.rs  worker.rs
shared_queue/: BUILD.gn  shared_queue.js  shared_queue.rs
src/: cli.rs  compiler.rs  isolate_state.rs  main.rs  msg_ring.rs  ops.rs  shared_queue.rs  workers.rs
tests/: 004_set_timeout.ts  012_async.ts  013_dynamic_import.ts  014_duplicate_import.ts  016_double_await.ts  018_async_catch.ts
tools/: format.py  target_test.py  test.py  throughput_benchmark.py
(+14 files in other folders)
