import("//build_extra/rust/rust.gni")

group("default") {
  testonly = true
  deps = [
    ":deno_core_http_bench",
    ":deno_core_test",
    ":shared_queue_test",
  ]
}

# deno_core does not depend on flatbuffers nor tokio.
main_extern = [
  "$rust_build:futures",
  "$rust_build:libc",
  "$rust_build:serde_json",
  "$rust_build:log",
]

rust_crate("deno_core") {
  source_root = "lib.rs"
  extern = main_extern
  deps = [
    "../libdeno:libdeno_static_lib",
  ]
}

rust_test("deno_core_test") {
  source_root = "lib.rs"
  extern = main_extern
  deps = [
    "../libdeno:libdeno_static_lib",
  ]
}

rust_executable("deno_core_http_bench") {
  source_root = "http_bench.rs"
  extern = [
    "$rust_build:futures",
    "$rust_build:lazy_static",
    "$rust_build:libc",
    "$rust_build:log",
    "$rust_build:tokio",
    ":deno_core"
  ]
}

rust_test("shared_queue_test") {
  source_root = "shared_queue.rs"
  extern = [
    ":deno_core",
    "$rust_build:futures",
    "$rust_build:tokio",
  ]
}
